fix display of label and required notes depending on which are visible

--- a/src/app/styles/css/inputs.module.css
+++ b/src/app/styles/css/inputs.module.css
@@ -4,8 +4,11 @@
     color: var(--textSecondary);
     display: grid;
     grid-gap: 8px;
-    grid-template-columns: 2fr 1fr;
     margin-bottom: 4px;
+
+    &.label-container-label.label-container-required {
+      grid-template-columns: 2fr 1fr;
+    }
 
     label {
       align-self: end;
